html and css add

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" ></script>
     <script src="javascript/typed.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-    
+    <link rel="shortcut icon" href="images/favicon.jpg" type="image/x-icon">
 </head>
 <body>
   <div class="scroll-up-btn">
@@ -47,7 +47,7 @@
         <div class="text-1">Hello, my name is</div>
         <div class="text-2">Mosharrof Hosen Munna</div>
         <div class="text-3">And I'm a <span class="typing"></span></div>
-        <a href="#">Hire me</a>
+        <a href="https://www.facebook.com/profile.php?id=100028489011065">Hire me</a>
       </div>
       
     </div>
@@ -110,7 +110,7 @@
       <div class="column left">
         <div class="text">My creative skills $ experience</div>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque labore illum animi delectus consequuntur veritatis harum porro ratione rem blanditiis nihil illo iusto, neque fugiat hic totam libero assumenda voluptatem necessitatibus laboriosam! In illum, blanditiis atque minus nesciunt quos assumenda. Exercitationem voluptates assumenda possimus officia! Eum, nulla sequi cumque incidunt ea itaque harum nam libero aliquam optio adipisci nesciunt quis!</p>
-        <a href="#">Read more</a>
+        <a href="skills.html">Read more</a>
       </div>
       <div class="column right">
         <div class="bars">
@@ -259,7 +259,7 @@
 </section>
 <!-- footer section start -->
 <footer>
-  <span>Create by <a href="#">Freelancer Munna</a> | <span class="far fa-copyright"> 2021 all rights reserved</span></span>
+  <span>Create by <a href="https://www.facebook.com/profile.php?id=100028489011065">Freelancer Munna</a> | <span class="far fa-copyright"> 2021 all rights reserved</span></span>
 </footer>
 
     <script src="javascript/main.js"></script>
